force-app/main/default/objects/User/fields/Drift_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Drift_Calendar__c</fullName>
    <label>Drift Calendar</label>
    <type>Url</type>
</CustomField>