force-app/main/default/objects/User/fields/Hubspot_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Calendar__c</fullName>
    <description>Hubspot calendar for scheduling.</description>
    <inlineHelpText>Hubspot calendar for scheduling.</inlineHelpText>
    <label>Hubspot Calendar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>