force-app/main/default/objects/User/fields/n2de__Is_logged_out__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_logged_out__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, user has logged and is not available to receive distributions from the Distribution Engine</inlineHelpText>
    <label>Is logged out</label>
    <type>Checkbox</type>
</CustomField>