force-app/main/default/objects/User/fields/Signature_Image__c.field-meta.xml
<CustomField>
    <fullName>Signature_Image__c</fullName>
    <description>Used as merge field in RS Documents.</description>
    <label>Signature Image</label>
    <type>Url</type>
</CustomField>