force-app/main/default/objects/User/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The first day with Americord, used to control rule that dictates commission. Different rules for first 90 days.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>