force-app/main/default/objects/User/fields/tdc_tsw__Disable_Incoming_SMS_Sharing__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Disable_Incoming_SMS_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop SMS Sharing on Incoming Alert</label>
    <type>Checkbox</type>
</CustomField>