force-app/main/default/objects/User/fields/tdc_tsw__Incoming_SMS_Alert_Audio_Id__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Incoming_SMS_Alert_Audio_Id__c</fullName>
    <label>Incoming SMS Alert Audio Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>