force-app/main/default/objects/User/fields/tdc_tsw__Limit__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Limit__c</fullName>
    <inlineHelpText>Total messages allowed
(Numeric value only)</inlineHelpText>
    <label>Message Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>