force-app/main/default/objects/User/fields/tdc_tsw__Limit_For__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Limit_For__c</fullName>
    <inlineHelpText>Use Following Digit Literals For Message Limiting In Comma-Separated Format Like(1,2,3) 
1. Detail Page button
2. Conversation View
3. Incoming Alert
4. Automation
5. Custom Development
6. List View
7. Campaign
8. SMSFromReport</inlineHelpText>
    <label>Message Limit For</label>
    <length>30</length>
    <type>Text</type>
</CustomField>