force-app/main/default/objects/User/fields/tdc_tsw__Stop_Message_Url_Email_ALert__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Stop_Message_Url_Email_ALert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Message Url Email Alert</label>
    <type>Checkbox</type>
</CustomField>