force-app/main/default/objects/User/fields/Today_s_Date__c.field-meta.xml
<CustomField>
    <fullName>Today_s_Date__c</fullName>
    <description>Today&apos;s date. This can be used in the email sends.</description>
    <formula>today()</formula>
    <inlineHelpText>Today&apos;s date. This can be used in the email sends.</inlineHelpText>
    <label>Today&apos;s Date</label>
    <type>Date</type>
</CustomField>