force-app/main/default/objects/User/fields/zkfedex__EncryptedFedExEndUserKey__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__EncryptedFedExEndUserKey__c</fullName>
    <label>Encrypted FedEx End User Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>