force-app/main/default/objects/User/fields/zkfedex__FedExRegisteredPreference__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__FedExRegisteredPreference__c</fullName>
    <description>Preference Number of the Shipmate Preference record that contains the FedEx Account Number that this user is registered to use.</description>
    <inlineHelpText>Preference Number of the Shipmate Preference record that contains the FedEx Account Number that this user is registered to use.</inlineHelpText>
    <label>FedEx Registered Preference</label>
    <length>30</length>
    <type>Text</type>
</CustomField>