force-app/main/default/objects/User/fields/zkfedex__UserCredentialsEncrypted__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__UserCredentialsEncrypted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Credentials Encrypted</label>
    <type>Checkbox</type>
</CustomField>